--- a/app/src/main/res/drawable/selector_unread_messages_status_background.xml
+++ b/app/src/main/res/drawable/selector_unread_messages_status_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2020 Proton Technologies AG
+  ~ Copyright (c) 2022 Proton Technologies AG
   ~
   ~ This file is part of ProtonMail.
   ~
@@ -26,7 +26,7 @@
         android:state_checked="false" />
 
     <item
-        android:color="@color/cornflower_blue"
+        android:color="?attr/brand_norm"
         android:state_checked="true" />
 
 </selector>
