--- a/app/src/main/res/drawable/selector_unread_messages_status_text_color.xml
+++ b/app/src/main/res/drawable/selector_unread_messages_status_text_color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2020 Proton Technologies AG
+  ~ Copyright (c) 2022 Proton Technologies AG
   ~
   ~ This file is part of ProtonMail.
   ~
@@ -22,7 +22,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:color="@color/cornflower_blue"
+        android:color="?attr/brand_norm"
         android:state_checked="false" />
 
     <item
