--- a/app/src/main/res/layout/layout_mailbox_status_view.xml
+++ b/app/src/main/res/layout/layout_mailbox_status_view.xml
@@ -20,6 +20,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/mailbox_status_view_height"
     android:paddingHorizontal="@dimen/mailbox_status_view_padding_horizontal"
@@ -32,8 +33,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="placeholder"
+        android:text="@string/mailbox_updated_just_now"
         android:visibility="gone"
+        tools:visibility="visible"
         style="@style/Proton.Text.Caption.Hint" />
 
     <ch.protonmail.android.mailbox.presentation.ui.UnreadChip
