Add "Mark all as read" button
#comment It uses the "messages" field in MessagesRecyclerViewAdapter, which is made public, if that is not the recommended way to do it please explain what i should do instead
Affected: MailboxActivity.kt, MessagesRecyclerViewAdapter.kt, mailbox_options_menu.xml, strings.xml

--- a/app/src/main/res/menu/mailbox_options_menu.xml
+++ b/app/src/main/res/menu/mailbox_options_menu.xml
@@ -36,6 +36,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:id="@+id/empty"
         android:title="@string/empty_folder"
         app:showAsAction="never" />
+    <item android:id="@+id/mark_all_as_read" android:title="@string/mark_all_read" app:showAsAction="never"/>
 
 
 </menu>
