Change interaction colors in UnreadChip
changed in:
* selector_unread_messages_status_background.xml
* selector_unread_messages_status_text_color.xml

MAILAND-1498,
MAILAND-2820

--- a/app/src/main/res/drawable/selector_unread_messages_status_background.xml
+++ b/app/src/main/res/drawable/selector_unread_messages_status_background.xml
@@ -26,7 +26,7 @@
         android:state_checked="false" />
 
     <item
-        android:color="?attr/brand_norm"
+        android:color="?attr/proton_interaction_norm"
         android:state_checked="true" />
 
 </selector>
