Splits the new user and existing user v4 onboarding
Extracts the base classes and the concrete implementations for
the new user onboarding and the existing user onboarding.

MAILAND-2825

--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -22,7 +22,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".onboarding.presentation.OnboardingActivity">
+    tools:context=".onboarding.base.presentation.OnboardingActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/onboarding_toolbar"
