--- a/app/src/main/res/layout/activity_contact_group_details.xml
+++ b/app/src/main/res/layout/activity_contact_group_details.xml
@@ -19,6 +19,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/contact_group_details_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_norm"
