Replace img_onboarding_labels_folders.xml illustration
MAILAND-2886

--- a/app/src/main/res/drawable/img_onboarding_labels_folders.xml
+++ b/app/src/main/res/drawable/img_onboarding_labels_folders.xml
@@ -1,82 +1,103 @@
+<!--
+  ~ Copyright (c) 2022 Proton AG
+  ~
+  ~ This file is part of Proton Mail.
+  ~
+  ~ Proton Mail is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Proton Mail is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Proton Mail. If not, see https://www.gnu.org/licenses/.
+  -->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="247dp"
-    android:height="189dp"
-    android:viewportWidth="247"
-    android:viewportHeight="189">
+    android:width="248dp"
+    android:height="190dp"
+    android:viewportWidth="248"
+    android:viewportHeight="190">
   <path
-      android:pathData="M69.415,16.283C69.415,7.29 76.705,0 85.698,0H153.707C162.7,0 169.99,7.29 169.99,16.283V172.717C169.99,181.71 162.7,189 153.707,189H85.698C76.705,189 69.415,181.71 69.415,172.717V16.283Z">
+      android:pathData="M69.697,16.369C69.697,7.329 77.026,0 86.066,0H154.436C163.476,0 170.805,7.329 170.805,16.369V173.631C170.805,182.671 163.476,190 154.436,190H86.066C77.026,190 69.697,182.671 69.697,173.631V16.369Z">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startY="-74.25"
-          android:startX="116.187"
-          android:endY="243.422"
-          android:endX="116.187"
+          android:startY="-74.6429"
+          android:startX="116.717"
+          android:endY="244.71"
+          android:endX="116.717"
           android:type="linear">
-        <item android:offset="0" android:color="#FF8A90A7"/>
-        <item android:offset="1" android:color="#FF06113E"/>
+        <item android:offset="0" android:color="#FF535271"/>
+        <item android:offset="1" android:color="#FF1D2340"/>
       </gradient>
     </aapt:attr>
   </path>
   <path
-      android:pathData="M103.7,13.034H136.082C137.452,13.033 138.794,12.638 139.945,11.894C141.096,11.151 142.009,10.092 142.574,8.843L144.468,4.649H154.126C160.172,4.649 165.073,9.55 165.073,15.595V173.406C165.073,179.452 160.172,184.353 154.126,184.353H85.661C79.615,184.353 74.714,179.452 74.714,173.406V15.595C74.714,9.55 79.615,4.649 85.661,4.649H95.319L97.214,8.843C97.778,10.091 98.69,11.15 99.84,11.893C100.991,12.636 102.331,13.032 103.7,13.034Z"
+      android:pathData="M104.164,13.103H136.717C138.095,13.102 139.443,12.705 140.601,11.957C141.758,11.21 142.676,10.145 143.243,8.89L145.148,4.673H154.857C160.935,4.673 165.862,9.6 165.862,15.678V174.324C165.862,180.401 160.935,185.328 154.857,185.328H86.03C79.952,185.328 75.025,180.401 75.025,174.324V15.678C75.025,9.6 79.952,4.673 86.03,4.673H95.739L97.643,8.89C98.211,10.145 99.127,11.209 100.284,11.956C101.44,12.703 102.787,13.101 104.164,13.103Z"
       android:fillType="evenOdd">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startY="191.124"
-          android:startX="211.371"
-          android:endY="-0.353577"
-          android:endX="60.5957"
+          android:startY="192.135"
+          android:startX="212.405"
+          android:endY="-0.355436"
+          android:endX="60.8316"
           android:type="linear">
-        <item android:offset="0" android:color="#00040F3C"/>
-        <item android:offset="1" android:color="#FFF7FEFF"/>
+        <item android:offset="0" android:color="#001D2548"/>
+        <item android:offset="1" android:color="#FFD5D2E3"/>
       </gradient>
     </aapt:attr>
   </path>
   <path
-      android:pathData="M99.528,37.719C99.528,33.307 103.105,29.731 107.516,29.731H199.135C203.547,29.731 207.124,33.307 207.124,37.719V58.551C207.124,62.963 203.547,66.54 199.135,66.54H107.516C103.105,66.54 99.528,62.963 99.528,58.551V37.719Z"
+      android:pathData="M99.97,37.919C99.97,33.483 103.565,29.888 108.001,29.888H200.104C204.54,29.888 208.135,33.483 208.135,37.919V58.861C208.135,63.296 204.54,66.892 200.104,66.892H108.001C103.565,66.892 99.97,63.296 99.97,58.861V37.919Z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M137.753,47.427C137.753,46.646 138.387,46.012 139.169,46.012H179.517C180.299,46.012 180.933,46.646 180.933,47.427C180.933,48.209 180.299,48.843 179.517,48.843H139.169C138.387,48.843 137.753,48.209 137.753,47.427Z"
-      android:fillColor="#D3DAE9"/>
+      android:pathData="M138.397,48.923C138.397,48.137 139.034,47.5 139.82,47.5H180.382C181.168,47.5 181.805,48.137 181.805,48.923C181.805,49.709 181.168,50.346 180.382,50.346H139.82C139.034,50.346 138.397,49.709 138.397,48.923Z"
+      android:fillColor="#EAE7E4"/>
   <path
-      android:pathData="M114.393,41.941H118.137L119.634,43.389H125.011V50.79H114.393V41.941ZM111.739,44.596H113.508V51.675H122.357V53.444L113.508,53.444V53.444H111.739V44.596Z"
-      android:fillColor="#FFCA43"
-      android:fillType="evenOdd"/>
+      android:pathData="M114.006,43.385C114.006,42.531 114.698,41.839 115.552,41.839H119.25C119.609,41.839 119.957,41.964 120.234,42.192L121.685,43.389C121.719,43.418 121.763,43.433 121.808,43.433L125.025,43.434C125.879,43.434 126.571,44.126 126.571,44.98V51.891C126.571,52.745 125.879,53.438 125.025,53.438L115.552,53.438C114.698,53.437 114.006,52.745 114.006,51.891V43.385Z"
+      android:fillColor="#EC3E7C"/>
   <path
-      android:pathData="M129.258,83.022C129.258,78.61 132.835,75.034 137.247,75.034H228.866C233.278,75.034 236.854,78.61 236.854,83.022V103.855C236.854,108.266 233.278,111.843 228.866,111.843H137.247C132.835,111.843 129.258,108.266 129.258,103.855V83.022Z"
+      android:pathData="M113.9,55.37L123.671,55.37C124.205,55.37 124.638,54.938 124.638,54.404H114.186C113.551,54.404 113.034,53.892 113.027,53.257L112.933,44.738C112.399,44.738 111.966,45.171 111.966,45.705V53.437C111.966,54.505 112.832,55.37 113.9,55.37Z"
+      android:fillColor="#EC3E7C"/>
+  <path
+      android:pathData="M129.858,83.461C129.858,79.026 133.453,75.431 137.888,75.431H229.992C234.427,75.431 238.022,79.026 238.022,83.461V104.404C238.022,108.839 234.427,112.435 229.992,112.435H137.888C133.453,112.435 129.858,108.839 129.858,104.404V83.461Z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M167.483,93.438C167.483,92.656 168.117,92.023 168.899,92.023H203.584C204.366,92.023 205,92.656 205,93.438C205,94.22 204.366,94.854 203.584,94.854H168.899C168.117,94.854 167.483,94.22 167.483,93.438Z"
-      android:fillColor="#D3DAE9"/>
+      android:pathData="M168.285,95.178C168.285,94.392 168.922,93.754 169.708,93.754H204.577C205.363,93.754 206,94.392 206,95.178C206,95.964 205.363,96.601 204.577,96.601H169.708C168.922,96.601 168.285,95.964 168.285,95.178Z"
+      android:fillColor="#EAE7E4"/>
   <path
-      android:pathData="M144.472,87.773H141.291V96.256H151.187V89.187H145.886L144.472,87.773Z"
-      android:fillColor="#6DCE71"/>
+      android:pathData="M145.106,91.134C145.106,90.066 145.972,89.201 147.039,89.201H149.778C150.196,89.201 150.603,89.336 150.938,89.587L152.304,90.612C152.337,90.637 152.378,90.65 152.42,90.65H156.705C157.773,90.65 158.638,91.516 158.638,92.584V98.866C158.638,99.934 157.773,100.799 156.705,100.799H147.039C145.972,100.799 145.106,99.934 145.106,98.866V91.134Z"
+      android:fillColor="#1DA583"/>
   <path
-      android:pathData="M16,131.157C16,126.745 19.576,123.169 23.988,123.169H115.607C120.019,123.169 123.596,126.745 123.596,131.157V151.989C123.596,156.401 120.019,159.978 115.607,159.978H23.988C19.576,159.978 16,156.401 16,151.989V131.157Z"
+      android:pathData="M16,133.096C16,128.661 19.595,125.065 24.031,125.065H116.134C120.569,125.065 124.165,128.661 124.165,133.096V154.039C124.165,158.474 120.569,162.069 116.134,162.069H24.031C19.595,162.069 16,158.474 16,154.039V133.096Z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M54.225,141.573C54.225,140.791 54.859,140.157 55.641,140.157H95.989C96.771,140.157 97.405,140.791 97.405,141.573C97.405,142.355 96.771,142.989 95.989,142.989H55.641C54.859,142.989 54.225,142.355 54.225,141.573Z"
-      android:fillColor="#D3DAE9"/>
+      android:pathData="M54.427,143.567C54.427,142.781 55.064,142.144 55.85,142.144H96.412C97.198,142.144 97.835,142.781 97.835,143.567C97.835,144.353 97.198,144.99 96.412,144.99H55.85C55.064,144.99 54.427,144.353 54.427,143.567Z"
+      android:fillColor="#EAE7E4"/>
   <path
-      android:pathData="M34.404,136.264C37.336,136.264 39.713,138.641 39.713,141.573C39.713,144.505 37.336,146.882 34.404,146.882C31.472,146.882 29.096,144.505 29.096,141.573C29.096,138.641 31.472,136.264 34.404,136.264Z"
-      android:fillColor="#415DF0"/>
+      android:pathData="M33.058,138.756C36.006,138.756 38.395,141.145 38.395,144.093C38.395,147.04 36.006,149.43 33.058,149.43C30.11,149.43 27.721,147.04 27.721,144.093C27.721,141.145 30.11,138.756 33.058,138.756Z"
+      android:fillColor="#936D58"/>
   <path
-      android:pathData="M5,82.789C5,69.651 15.651,59 28.789,59C41.928,59 52.579,69.651 52.579,82.789V106.579H28.789C15.651,106.579 5,95.928 5,82.789Z">
+      android:pathData="M16,90.807C16,79.564 25.114,70.45 36.357,70.45C47.6,70.45 56.714,79.564 56.714,90.807V111.164H36.357C25.114,111.164 16,102.05 16,90.807Z">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startY="59"
-          android:startX="28.7893"
-          android:endY="106.579"
-          android:endX="28.7893"
+          android:startY="70.4495"
+          android:startX="36.3572"
+          android:endY="111.164"
+          android:endX="36.3572"
           android:type="linear">
-        <item android:offset="0" android:color="#FF7492FB"/>
-        <item android:offset="1" android:color="#FF7569D1"/>
+        <item android:offset="0" android:color="#FF8A71FF"/>
+        <item android:offset="1" android:color="#FF613CFC"/>
       </gradient>
     </aapt:attr>
   </path>
   <path
-      android:pathData="M18.742,84.546L26.456,92.274L37.264,81.521V81.057L36.637,74.379L29.958,73.738L29.495,73.807L18.742,84.546ZM34.947,77.282C34.947,78.035 34.336,78.645 33.584,78.645C32.831,78.645 32.221,78.035 32.221,77.282C32.221,76.529 32.831,75.919 33.584,75.919C34.336,75.919 34.947,76.529 34.947,77.282Z"
+      android:pathData="M39.06,98.886C38.603,99.342 37.863,99.342 37.407,98.886L29.98,91.459C29.761,91.24 29.638,90.942 29.638,90.632V84.918C29.638,84.272 30.161,83.749 30.806,83.749H36.521C36.831,83.749 37.129,83.872 37.348,84.091L44.775,91.518C45.231,91.975 45.231,92.715 44.775,93.171L39.06,98.886ZM33.583,88.736C34.16,88.736 34.627,88.269 34.627,87.692C34.627,87.116 34.16,86.648 33.583,86.648C33.007,86.648 32.539,87.116 32.539,87.692C32.539,88.269 33.007,88.736 33.583,88.736Z"
       android:fillColor="#ffffff"
       android:fillType="evenOdd"/>
 </vector>
