Apply correct style to Buttons across the app
MAILAND-2885

--- a/app/src/main/res/layout/activity_set_message_password.xml
+++ b/app/src/main/res/layout/activity_set_message_password.xml
@@ -111,6 +111,7 @@
             <!-- Apply -->
             <me.proton.core.presentation.ui.view.ProtonButton
                 android:id="@+id/set_msg_password_apply_button"
+                style="@style/ProtonButton.Borderless.Text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/set_msg_password_hint_input"
