--- a/app/src/main/res/layout/layout_mailbox_status_view.xml
+++ b/app/src/main/res/layout/layout_mailbox_status_view.xml
@@ -33,9 +33,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/mailbox_updated_just_now"
-        android:visibility="gone"
-        tools:visibility="visible"
+        tools:text="@string/mailbox_updated_just_now"
         style="@style/Proton.Text.Caption.Hint" />
 
     <ch.protonmail.android.mailbox.presentation.ui.UnreadChip
