--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -60,4 +60,6 @@
     <color name="hyperlink_color">#0000EE</color>
     <!-- endregion -->
 
+    <color name="onboarding_image_background">#f2efff</color>
+
 </resources>
