Fix spinner dropdown colors in dark mode
MAILAND-2914

--- a/app/src/main/res/layout/timeout_spinner_item.xml
+++ b/app/src/main/res/layout/timeout_spinner_item.xml
@@ -19,10 +19,12 @@
   -->
 <TextView android:id="@android:id/text1"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/Proton.Text.Default"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical|start"
     android:ellipsize="end"
     android:gravity="center_vertical|start"
-    android:maxLines="1" />
+    android:maxLines="1"
+    tools:text="Hello"/>
