--- a/app/src/main/res/drawable/spinner_item_dropdown.xml
+++ b/app/src/main/res/drawable/spinner_item_dropdown.xml
@@ -25,7 +25,7 @@
     </item>
     <item android:bottom="1px">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/background_secondary" />
         </shape>
     </item>
 </layer-list>
